Add image viewer component.